--- a/index.html
+++ b/index.html
@@ -21,6 +21,17 @@
       <input type="email" id="login-email" placeholder="Email" required>
       <input type="password" id="login-password" placeholder="Password" required>
       <button type="submit">Login</button>
+            <button type="button" class="toggle-btn" onclick="toggleForm()">Don't have an account? Register</button>
+
+    </form>
+
+     <!-- Register Form -->
+    <form id="register-form" style="display:none;">
+      <input type="text" id="register-name" placeholder="Full Name" required>
+      <input type="email" id="register-email" placeholder="Email" required>
+      <input type="password" id="register-password" placeholder="Password" required>
+      <button type="submit">Register</button>
+      <button type="button" class="toggle-btn" onclick="toggleForm()">Already have an account? Login</button>
     </form>
 
   </div>
