feat(Register page added)

--- a/index.html
+++ b/index.html
@@ -37,7 +37,32 @@
   </div>
 </div>
 
+<script>
+  const container = document.getElementById('container');
+  const loginForm = document.getElementById('login-form');
+  const registerForm = document.getElementById('register-form');
+  const formTitle = document.getElementById('form-title');
+  const errorMsg = document.getElementById('error-msg');
+  const formPanel = document.getElementById('form-panel');
 
+  function toggleForm() {
+    errorMsg.textContent = '';
+    if(loginForm.style.display === 'none') {
+      // Switch to login
+      loginForm.style.display = 'block';
+      registerForm.style.display = 'none';
+      formTitle.textContent = 'Login';
+      container.classList.remove('register-active');
+    } else {
+      // Switch to register
+      loginForm.style.display = 'none';
+      registerForm.style.display = 'block';
+      formTitle.textContent = 'Register';
+      container.classList.add('register-active');
+    }
+  }
+
+</script>
 
 </body>
 </html>
