feat(Registation function implement with local storage)

--- a/index.html
+++ b/index.html
@@ -61,6 +61,22 @@
       container.classList.add('register-active');
     }
   }
+  
+  // Simple registration storage using localStorage
+  registerForm.addEventListener('submit', (e) => {
+    e.preventDefault();
+    const name = document.getElementById('register-name').value.trim();
+    const email = document.getElementById('register-email').value.trim();
+    const password = document.getElementById('register-password').value.trim();
+
+  
+
+    localStorage.setItem(email, JSON.stringify({name, password}));
+    alert('Registration successful! You can now login.');
+    toggleForm();
+  });
+
+  
 
 </script>
 
