feat(Login fucnctionality implement successfully)

--- a/index.html
+++ b/index.html
@@ -79,7 +79,15 @@
     toggleForm();
   });
 
-  
+  loginForm.addEventListener('submit', (e) => {
+    e.preventDefault();
+    const email = document.getElementById('login-email').value.trim();
+    const password = document.getElementById('login-password').value.trim();
+
+    const user = JSON.parse(localStorage.getItem(email));
+
+    alert(`Welcome back, ${user.name}!`);
+  });
 
 </script>
 
